# model-evaluator-platform-poc

./: .gitignore  README.md  devbox.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci-models.yml  ci-platform.yml  evaluate-model.yml
models/cluster-classifier/: pyproject.toml
models/cluster-classifier/scripts/: generate_clusters.py
models/cluster-classifier/src/model/: main.py
models/model-template/: Dockerfile  pyproject.toml
models/model-template/src/model/: main.py
platform/: .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
platform/alembic/: env.py
platform/alembic/versions/: 001_initial.py
platform/src/qml_platform/: db.py  evaluator.py  main.py  models.py  schemas.py  settings.py
scripts/: test-model-contract.sh  test-platform.sh
