[project]
name = "qml-platform"
version = "1.0.0"
description = "QML Model Evaluation Platform API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "docker>=7.0",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qml_platform"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
