[project]
name = "cluster-classifier"
version = "0.1.0"
description = "Minimal PyTorch 2-cluster binary classifier for QML platform testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "torch>=2.2",
    "numpy>=1.26",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src/model"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
