[project]
name = "model-template"
version = "0.1.0"
description = "QML model template — clone and customize"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[tool.hatch.build.targets.wheel]
packages = ["src/model"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
